fix styling.. carousel needs work to properly align the content

--- a/web/src/css/retrievalview.css
+++ b/web/src/css/retrievalview.css
@@ -1,10 +1,15 @@
-#child {
+.first {
+    max-width: 50%;
+    max-height: 50%;
     float: left;
-
-}  
-#wrapper {
-    display: inline-block;
 }
-#carousel-content {
-    text-align: 'center';
+
+.slick-track{
+    margin:0 auto;
+    width: 500px;
+    text-align: center;
+}
+
+.second{
+    margin-right: 10%;
 }
